--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	</parent>
 
 	<groupId>com.java.aadityadesigners</groupId>
-	<artifactId>GenieAI</artifactId>
+	<artifactId>WonderCodeAI</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
-	<name>GenieAI</name>
-	<description>GenieAI for generating automated project codes using ChatGPT AI services</description>
+	<name>WonderCodeAI</name>
+	<description>WonderCodeAI for generating automated project codes using ChatGPT AI services</description>
  	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
