--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,9 @@ spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-logging.config: classpath:log4j2-dev.xml    
+logging.config: classpath:log4j2-dev.xml 
+
+chatgpt:
+  api:
+    key: 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
+    endpoint: https://api.openai.com/v1/completions  
